added styles for category "investing"

--- a/wordpress/wp-content/themes/thulme/assets/less/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/config.less
@@ -7,7 +7,8 @@
 // https://kuler.adobe.com/thulme-com-color-theme-2664357/
 @stockholm:       #fcfffc;
 @deep-sea:        #32373C;
-@thulme:          #40E2E1;
+@investing:       #40E2E1;
+@thulme:          #102753;
 @startup-tools:   #90CC3A;
 @open-design:     #EBC434;
 @weiji:           #D13351;
