home page style tweaks

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
@@ -15,7 +15,7 @@ body.home {
   // Article list styling
   .category ul {
     margin-top: 0;
-    margin-bottom: (@base-font-size * @base-line-height);
+    margin-bottom: (2 * @base-font-size * @base-line-height);
 
     li {
       margin-bottom: (@base-font-size * @base-line-height);
@@ -38,6 +38,11 @@ body.home {
     // Align with site title
     margin-top: 11px;
     line-height: 35px;
+
+    a {
+      display: block;
+      text-decoration: none;
+    }
   }
   .category-description {
     color: @concrete;
