replaced mobile nav with just a search field

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -176,7 +176,7 @@ a:focus {
   // Navigation toggle
   #nav-toggle {
     position: absolute;
-    top: (@base-font-size * @base-line-height);
+    top: 60px; // Line up with brand
     right: 4.687499999999999%; // Equivalent to .pull(1)
 
     @media (min-width: @tabletBreakpoint) {
@@ -184,7 +184,8 @@ a:focus {
     }
   }
   .navigation,
-  .description {
+  .description,
+  .navigation .nav li {
     @media (max-width: @tabletBreakpoint) {
       display: none;
     }
