clickable headlines on home page, close #8

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
@@ -48,7 +48,7 @@ body.home {
     color: @concrete;
     border-bottom: 1px solid @clouds;
 
-    margin-bottom: (2 * @base-font-size * @base-line-height);
+    margin-bottom: @base-line-height;
 
     font-size: @small;
   }
