--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -37,6 +37,7 @@ body {
   .column(23);
   .push(1);
   .pull(1);
+  margin-bottom: (@base-font-size * @base-line-height);
 }
 @media (min-width: @tabletBreakpoint) {
   .banner {
