restored secondary nav in mobile nav

--- a/wordpress/wp-content/themes/thulme/assets/less/style.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/style.less
@@ -186,7 +186,7 @@ a:focus {
   }
   .navigation,
   .description,
-  .navigation .nav li {
+  .navigation .nav-primary li {
     @media (max-width: @tabletBreakpoint) {
       display: none;
     }
