responsive clearing of startpage cols

--- a/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/partials/home.less
@@ -121,6 +121,10 @@ body.home {
       .category-weiji {
         .column(9, 18);
       }
+      // New row on third category
+      .category:nth-child(odd) {
+        clear: left;
+      }
 
     }
   }
